# GCP-AI-App-Demo

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py  models.py
app/services/: firestore_service.py  gcs_service.py  gemini_service.py
app/static/: app.js  index.html  style.css
kubernetes/: configmap.yaml  deployment.yaml  service.yaml
terraform/: apis.tf  artifact_registry.tf  firebase.tf  firestore.tf  gcs.tf  gke.tf  iam.tf  main.tf  outputs.tf  variables.tf
